fix mypage_function